[metadata]
name = nxontology
author = Daniel Himmelstein
license = Apache
description =  NetworkX for ontologies
url = https://github.com/related-sciences/nxontology
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = nxontology
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    networkx>=2
    fsspec
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[options.extras_require]
dev =
    fire
    pandas

[flake8]
ignore =
    E203
    E402
    E501
    E731
    W503

[isort]
profile = black
default_section = THIRDPARTY
known_third_party = setuptools
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy-pyspark.*,setuptools.*,pytest.*,_pytest.*]
ignore_missing_imports = True
