[metadata]
name = nxontology
maintainer = Daniel Himmelstein
maintainer_email = dhimmel@related.vc
license = Apache
license_file = LICENSE
description =  NetworkX for ontologies
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/related-sciences/nxontology
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    networkx
    ontologies
    similarity
    graphs
    networks
    digraph
    information-content
    semantic-similarity

[options]
packages = nxontology
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    networkx>=2
    pronto>=v2.4.0
    fsspec[http]

[options.extras_require]
dev =
    fire
    pandas
    pre-commit
    pytest
viz =
    pygraphviz

[flake8]
ignore =
    E203
    E402
    E501
    E731
    W503
